add coin validator

--- a/YetAnotherVendingMachine.Tests/YetAnotherVendingMachine.Tests.csproj
+++ b/YetAnotherVendingMachine.Tests/YetAnotherVendingMachine.Tests.csproj
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="VendingMachineTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\YetAnotherVendingMachine\YetAnotherVendingMachine.csproj">
+      <Project>{9815DD3A-E5CA-462C-A76D-D26508BDF42F}</Project>
+      <Name>YetAnotherVendingMachine</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
