--- a/YetAnotherVendingMachine/YetAnotherVendingMachine.csproj
+++ b/YetAnotherVendingMachine/YetAnotherVendingMachine.csproj
@@ -40,10 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomExceptions\WrongCoinsException.cs" />
     <Compile Include="Money.cs" />
     <Compile Include="IVendingMachine.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VendingMachine.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
