add failed test for insert coins

--- a/YetAnotherVendingMachine/YetAnotherVendingMachine.csproj
+++ b/YetAnotherVendingMachine/YetAnotherVendingMachine.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoinValidator.cs" />
     <Compile Include="CustomExceptions\WrongCoinsException.cs" />
     <Compile Include="Money.cs" />
     <Compile Include="IVendingMachine.cs" />
