add common implementation of buy

--- a/YetAnotherVendingMachine/YetAnotherVendingMachine.csproj
+++ b/YetAnotherVendingMachine/YetAnotherVendingMachine.csproj
@@ -41,6 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoinValidator.cs" />
+    <Compile Include="CustomExceptions\InsufficientFundsException.cs" />
+    <Compile Include="CustomExceptions\ProductNotAvailableException.cs" />
+    <Compile Include="CustomExceptions\ProductNotFoundException.cs" />
     <Compile Include="CustomExceptions\WrongCoinsException.cs" />
     <Compile Include="Money.cs" />
     <Compile Include="IVendingMachine.cs" />
