--- a/YetAnotherVendingMachine/YetAnotherVendingMachine.csproj
+++ b/YetAnotherVendingMachine/YetAnotherVendingMachine.csproj
@@ -40,17 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CoinValidator.cs" />
+    <Compile Include="Validators\CoinValidator.cs" />
     <Compile Include="CustomExceptions\InsufficientFundsException.cs" />
     <Compile Include="CustomExceptions\ProductNotMoreOneException.cs" />
     <Compile Include="CustomExceptions\ProductNotAvailableException.cs" />
     <Compile Include="CustomExceptions\ProductNotFoundException.cs" />
     <Compile Include="CustomExceptions\WrongCoinsException.cs" />
-    <Compile Include="ICoinValidator.cs" />
+    <Compile Include="Validators\ICoinValidator.cs" />
     <Compile Include="Money.cs" />
     <Compile Include="IVendingMachine.cs" />
-    <Compile Include="MoneyProvider.cs" />
+    <Compile Include="Providers\MoneyProvider.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="Providers\ProductProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VendingMachine.cs" />
   </ItemGroup>
