--- a/YetAnotherVendingMachine/YetAnotherVendingMachine.csproj
+++ b/YetAnotherVendingMachine/YetAnotherVendingMachine.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomExceptions\ProductValidateException.cs" />
     <Compile Include="Providers\IMoneyProvider.cs" />
     <Compile Include="Providers\IProductProvider.cs" />
     <Compile Include="Validators\CoinValidator.cs" />
@@ -55,6 +56,8 @@
     <Compile Include="Product.cs" />
     <Compile Include="Providers\ProductProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\IProductValidator.cs" />
+    <Compile Include="Validators\ProductValidator.cs" />
     <Compile Include="VendingMachine.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
